deployments/monitoring/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
      - websecure
    routes: 
      - match: Host(`grafana.service.sprint.luchtenberg.eu`)
        kind: Rule
        services:
          - name: grafana
            port: 80
    tls:
      secretName: grafana-service-sprint-luchtenberg-eu-production-tls
